# tested-rocket-pastebin

./: .travis.yml  Cargo.toml  Procfile  dev.db  test.sh
migrations/20170716135429_create_pastes/: up.sql
src/: database.rs  lib.rs  main.rs  models.rs  routes.rs
tests/: integration_test.rs
