[package]
name = "tested-rocket-pastebin"
version = "0.1.0"
authors = ["wildarch <daandegraaf9@gmail.com>"]

[dependencies]
rocket = "0.3.0"
rocket_codegen = "0.3.0"
uuid = { version = "0.5", features = ["v4"] }
diesel = { version = "0.14.0", features = ["postgres", "uuid"] }
diesel_codegen = { version = "0.14.0", features = ["postgres"] }
r2d2-diesel = "0.14"
r2d2 = "0.7"
dotenv = "0.9.0"


[dev-dependencies]
tempdir = "0.3"
